tests/e2e/scenarios/negative/uncaught_exception.ks
// E2E: uncaught exception must print stack trace with file:line (debug section).
// VM divide-by-zero uses stdlib `DivideByZero` from kestrel:runtime (no local declaration needed).

1 / 0
